test/errors/field_names_error/zs/reserved_python_keyword_error.zs
package reserved_python_keyword_error;

struct Item
{
    uint16  param;
    uint32  def;    // reserved keyword in generated Python
};
